# Resume-Builder

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_COMPLETE_SUMMARY.md  CLAUDE.md  DESIGN_AUDIT.md  DESIGN_REVIEW_SUMMARY.md  PRINT_OPTIMIZATION_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  REDESIGN_SPECIFICATIONS.md  TODO_IMPLEMENTATION.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  plan.md  playwright.config.ts  postcss.config.cjs  project-structure.md  qa-overflow-check.json  qa-overflow-v2.json  qa-overflow-v3.json  qa-overflow-v4.json  qa-overflow-v5.json  qa-overflow-v6.json  qa-overflow-v7.json  qa-overflow-v8.json  qa-spacing-consistency.json  qa-typography-audit.json  response.network-response  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  todo-list.md  tsconfig.json  vitest.config.ts
.blackbox/skills/nextjs-ui-improver/: SKILL.md
.claude/agents/: api-designer.md  backend-developer.md  error-detective.md  fastapi-developer.md  fullstack-developer.md  nextjs-developer.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
.sisyphus/plans/: auth-refactor.md
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240614_add_auth_constraints.py  20240616_add_model_to_ai_providers_and_ats_scans.py  20240617_add_original_file_fields_to_resumes.py  20250619_add_skill_groups_to_resume_data.py  20250619_add_template_style_to_resume_data.py  20250620_add_injected_file_path_to_resumes.py  20250717_add_fk_constraints.py  20250717_add_performance_indexes.py  20250718_add_pending_user_flow.py  20250718_supabase_auth_migration.py  20250721_profile_on_verify.py  20250724_add_updated_at_to_ai_providers.py
backend/app/: limiter.py  main.py
backend/app/config/: database.py  logging.py  settings.py
backend/app/middleware/: auth.py  body_size_limit.py  cache_control.py  error_handler.py  metrics.py  request_logger.py  security_headers.py
backend/app/modules/ai/: models.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/ai/providers/: anthropic.py  gemini.py  nvidia_nim.py  openai_compatible.py
backend/app/modules/ai_providers/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/ats/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: EXCEPTION_PLAN.md  __init__.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/modules/auth/ats/: models.py  router.py  schemas.py  service.py
backend/app/modules/resumes/: export.py  models.py  router.py  schemas.py  service.py
backend/app/modules/resumes/templates/: classic.html  creative.html  default.html  minimal.html  modern.html
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/app/scripts/: init_db.py
backend/app/services/: email_sender.py  email_templates.py  email_validation.py  html_renderer.py  pdf_service.py
backend/app/types/: common.py
backend/app/utils/: ai.py  auth.py  cache.py  docx_injector.py  email.py  email_sender.py  encryption.py  http_client.py  jwt.py  metrics.py  ownership.py  password.py  pdf_editor.py  pdf_exporter.py  pdf_parser.py  style_extractor.py  template_builder.py  token.py
backend/tests/: conftest.py  test_ai_providers.py  test_ai_suggest.py  test_ats_score.py  test_auth.py
backend/uploads/4f60623c-a9e4-4b44-a8d1-47cd04e82603/: 01c08116526f4d74931863716196d570_injected.docx  bd6ca435609c401d897a6ef10b1aee58_injected.docx
docs/: DESIGN.md  GenerativeCV_PRD.md  design-system.md  instruction.md  resume-design-system-plan.md
e2e/: landing.spec.ts  visual.test.ts
frontend/: eslint.config.mjs  frontend-structure.md  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/contexts/: sidebar-context.tsx
frontend/src/hooks/: use-ai-config.ts
frontend/src/lib/: pdf-check.ts  store.ts  template-registry.ts  test-utils.tsx
frontend/src/providers/: redux-provider.tsx
frontend/src/schemas/: auth.ts  resume.ts
frontend/src/store/: resume-store.ts
frontend/src/types/: design.ts  resume.ts  template.ts
load-tests/: k6-config.json  load-test.js  smoke-test.js  soak-test.js  spike-test.js  stress-test.js
load-tests/scenarios/: ai-optimize.js  ats-analysis.js  auth.js  dashboard.js  resume-create.js
prisma/: schema.prisma
prisma/migrations/20260603061158_remove_plan_field/: migration.sql
scripts/: lighthouse.js
src/__tests__/: Accessibility.test.tsx  BuilderWizard.accessibility.test.tsx  BuilderWizard.test.tsx  Button.test.tsx  ats.spec.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(dashboard)/: layout.tsx
src/app/cover-letter/: page.tsx
src/hooks/: useDebounce.ts
src/lib/: ai.ts  analytics.ts  apiService.ts  ats.ts  email.ts  env.ts  prisma.ts  rate-limit-ai.ts  rate-limit.ts  sample-resume.ts  stripe.ts
src/styles/: designTokens.css
src/types/: fast-levenshtein.d.ts  jd.ts  pdf-parse.d.ts  resume.ts
(+311 files in other folders)
