# ------------------------------------------------------------
# Project metadata and build configuration for the FastAPI
# backend of the GenerativeCV product.  Uses Python 3.12+.
# ------------------------------------------------------------

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-cv-backend"
version = "0.1.0"
description = "FastAPI backend for the GenerativeCV application (resume generation, PDF handling, etc.)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fujel", email = "your.email@example.com"}
]

# -----------------------------------------------------------------
# Core runtime dependencies – all are async‑compatible where possible
# -----------------------------------------------------------------
dependencies = [
    "fastapi[all]>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.1.2",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.1",
    "PyMuPDF>=1.24.5",
    "weasyprint>=62.3",
    "python-dotenv>=1.0.1",
    "aiosmtplib>=2.0.2",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
    "python-docx>=1.2.0",
    "playwright>=1.48.0",
    "loguru>=0.7.2",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "cachetools>=5.5.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "dnspython>=2.6.0",
    "supabase>=2.7.5",
]

# ---------------------------------------------------------------
# Optional / development dependencies (testing, linting, etc.)
# ---------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "asgi-lifespan>=2.1.0",   # Useful for testing app lifespan events
    "ruff>=0.6.2",            # Linter / formatter
    "mypy>=1.11.2",           # Static typing checks
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.setuptools.packages.find]
where = ["."]   # Adjust if you have a different package layout
